# cice

./: .gitignore  Cargo.toml  devenv.nix  flake.nix  rust-toolchain.toml
.github/: codecov.yml  dependabot.yml
.github/workflows/: action.yml  controller.yml  core.yml  coverage.yml  fmt.yml  nix.yml  recognizer.yml  runtime.yml
cice-controller/: Cargo.toml
cice-core/: Cargo.toml
cice-core/src/: lib.rs
cice-core/src/controller/: mod.rs
cice-core/src/driver/: mod.rs
cice-core/src/executor/: state.rs  task.rs
cice-core/src/graph/: mod.rs  node.rs
cice-core/src/recognizer/: mod.rs
cice-debug/: Cargo.toml
cice-driver/: Cargo.toml  README.md
cice-judge/: Cargo.toml
cice-lang/: Cargo.toml
cice-recognizer/: Cargo.toml
crates/cice/: Cargo.toml
crates/cice-action/: Cargo.toml
crates/cice-action/src/: lib.rs  types.rs
crates/cice-action/src/controller/: input.rs  mod.rs  output.rs
crates/cice-action/src/recognizer/: image.rs  mod.rs
crates/cice-actions/cice-action-opencv/: Cargo.toml  README.md
crates/cice-actions/cice-action-opencv/src/: convert.rs  lib.rs  template_match.rs
crates/cice-controller/: Cargo.toml
crates/cice-controllers/cice-controller-adb/: Cargo.toml
crates/cice-controllers/cice-controller-adb/src/: lib.rs
crates/cice-controllers/cice-controller-vnc/: Cargo.toml  README.md
crates/cice-controllers/cice-controller-windows/: Cargo.toml
crates/cice-controllers/cice-controller-windows/src/: lib.rs  window.rs
crates/cice-controllers/cice-controller-windows/src/capture/: mod.rs
crates/cice-core/: Cargo.toml  build.rs
crates/cice-core/fuzz/: Cargo.toml
crates/cice-core/proto/config/: controller.proto  recognizer.proto
crates/cice-core/proto/task/: base_task_data.proto
crates/cice-core/src/: config.rs  context.rs  lib.rs  pipeline.rs  resource.rs  task.rs  utils.rs
crates/cice-core/src/action/: mod.rs
crates/cice-core/src/action/controller/: input.rs  mod.rs  output.rs
crates/cice-core/src/action/reconizer/: mod.rs
crates/cice-core/src/controller/: mod.rs
crates/cice-core/src/controller/input/: click.rs  mod.rs  swipe.rs  text.rs
crates/cice-core/src/controller/output/: image.rs  mod.rs
crates/cice-core/src/executor/: mod.rs
crates/cice-core/src/graph/: node.rs
crates/cice-core/src/message/: mod.rs  task.rs
crates/cice-core/src/recognizer/: action.rs  image.rs  mod.rs  result.rs
crates/cice-core/src/runtime/: mod.rs
crates/cice-core/src/runtime/ext/: mod.rs
crates/cice-core/src/task/: config.rs  mod.rs
crates/cice-core/tests/: REFACTOR.md  base_config.rs  base_resource.rs  base_task.rs
crates/cice-core/tests/common/: controller.rs  mod.rs  recognizer.rs  resource.rs  resourece.rs  task.rs
crates/cice-core/tests/common/controller/: controller_input_and_output_action.rs  controller_simple_image_output.rs  controller_simple_with_config.rs  dummy_controller.rs  mod.rs
crates/cice-core/tests/common/recognizer/: mod.rs  recognizer_accept_all.rs  recognizer_assert_image.rs  recognizer_deny_all.rs  recognizer_simple_image_input.rs  recognizer_simple_with_action.rs  recognizer_simple_with_config.rs
crates/cice-core/tests/task_config/json/: base_config.json  base_resourcce.json  base_resource.json  base_task.json  controller_input_and_output_action.json  recognizer_simple_with_action.json  simple_image.json  task_sequence.json  tasks.json
crates/cice-lang/src/: lib.rs
crates/cice-recognizers/cice-recognizer-opencv/: Cargo.toml
crates/cice-recognizers/cice-recognizer-opencv/src/: convert.rs  lib.rs  template_match.rs
crates/cice-runtimes/cice-runtime-vnc/: Cargo.toml  README.md
crates/cice-runtimes/cice-runtime-vnc/src/: lib.rs
crates/cice-runtimes/cice-runtime-vnc/src/ext/: mod.rs
crates/cice-tests-common/: Cargo.toml
crates/cice-tests-common/src/: lib.rs
crates/cice-tests-common/src/controller/: controller_input_and_output_action.rs  dummy_controller.rs
crates/cice-tests-common/src/recognizer/: recognizer_simple_with_config.rs
crates/dev/: README.md
crates/dev/cice-tests-common/: Cargo.toml  README.md
crates/dev/cice-tests-common/src/: lib.rs  resource.rs  task.rs
crates/dev/cice-tests-common/src/action/: mod.rs
crates/dev/cice-tests-common/src/controller/: controller_simple_image_output.rs  controller_simple_with_config.rs  dummy_controller.rs  mod.rs
crates/dev/cice-tests-common/src/recognizer/: mod.rs  recognizer_deny_all.rs  recognizer_simple_image_input.rs
crates/dev/cice-tests-common/tests/: action_tests.rs
crates/examples/cice-integration-vnc-opencv/: Cargo.toml  README.md
crates/examples/cice-integration-vnc-opencv/examples/: vnc_template_match.rs
docs/refactor/controller-recognizer-to-runtime-action/: FILES_CHECKLIST.md  GETTING_STARTED.md  PHASE2_COMPLETION.md  PHASE2_DONE.md  PHASE2_REPORT.md  PHASE2_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  TODO.md  runtime-refactor.md
script/ci/opencv/: script.sh
script/dependency/opencv/: install-macos-brew.sh  install-macos-framework.sh  install-macos-vcpkg.sh  install-ubuntu-vcpkg.sh  install-ubuntu.sh  install-windows-choco.sh  install-windows-chocolatey.sh  install-windows-vcpkg.sh  install.sh
script/dependency/protobuf/: install-macos-brew.sh  install-ubuntu.sh  install-windows-choco.sh
