[workspace]
members = [
    "crates/cice",
    "crates/cice-core",
    "crates/cice-action",
    "crates/cice-debug",
    "crates/cice-lang",
    "crates/cice-controllers/*",
    "crates/cice-recognizers/*",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.88"
serde = "1.0.214"
serde_json = "1.0.132"
log = "0.4.22"
snafu = "0.8.5"
futures = "0.3.31"
image = { version = "0.25.5", default-features = false }

# Dev dependencies
tokio = { version = "1.44.2", features = ["rt", "macros"] }
