[package]
name = "cice-core"
version = "0.1.0"
edition = "2021"

[dependencies]
euclid = { version = "0.22.11" }
log = "0.4.22"
prost = { version = "0.13.3" }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

[dev-dependencies]
tokio = { version = "1.41.1", features = ["rt", "macros"] }

[build-dependencies]
prost-build = "0.13.3"
