[package]
name = "cice-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = { version = "2.3.1", default-features = false }
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
snafu = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
image = { workspace = true, features = ["jpeg"] }
cice-tests-common = { path = "../dev/cice-tests-common" }
