[package]
name = "cice-tests-common"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = { version = "2.3.1", default-features = false }
async-trait = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
snafu = { workspace = true }
cice-core = { path = "../cice-core" }
[dev-dependencies]
tokio = { workspace = true }
image = { workspace = true, features = ["jpeg"] }
