[package]
name = "cice-action-opencv"
version = "0.1.0"
edition = "2021"

[dependencies]
cice-core = { version = "0.1.0", path = "../../cice-core" }
opencv = { version = "0.94.2", features = ["clang-runtime"] }
image = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
