[package]
name = "cice-action-opencv"
version = "0.1.0"
edition = "2021"

[dependencies]
cice-core = { version = "0.1.0", path = "../../cice-core" }
image = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(windows))'.dependencies]
opencv = { version = "0.94.2", features = [
    "clang-runtime",
] } #https://github.com/twistedfall/opencv-rust/commit/bf994662871dc2570b5a84fe914c3dcb2909e242

[target.'cfg(windows)'.dependencies]
opencv = "0.94.2"

[features]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
