[package]
name = "cice-controller-windows"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.3", features = [
    "Win32",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_Graphics_Dwm",
    "Win32_System",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Graphics",
    "Win32_System_WinRT_Graphics_Capture",
    "Storage",
    "Storage_Streams",
    "Graphics",
    "Graphics_Imaging",
    "Graphics_Capture",
] }


image = { workspace = true }
snafu = { workspace = true }

[dev-dependencies]
image = { workspace = true, features = ["png"] }
