[package]
name = "cice-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.cice-core]
path = ".."

[[bin]]
name = "graph_fuzzer"
path = "fuzz_targets/graph_fuzzer.rs"
test = false
doc = false
bench = false
